# pyspark-github-action-windows

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: coverage.yaml  test.yaml
src/pyspark_github_action_windows/: __init__.py  main.py
tests/: test_main.py
