[project]
name = "pyspark-github-action-windows"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andy7475", email = "Andy7475@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "coverage>=7.13.2",
    "pandas>=3.0.0",
    "pyspark>=4.1.1",
    "pytest>=9.0.2",
]

[project.scripts]
pyspark-github-action-windows = "pyspark_github_action_windows:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
